# pyxelhangman

./: .gitignore  README.md  pyproject.toml  pyxelhangman.html  pyxelhangman.pyxapp  requirements.txt
src/pyxelhangman/: __init__.py  game.py  hangman.py  main.py  quotes.py
