[project]
name = "pyxelhangman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdul Qoyyuum", email = "abdul.qoyyuum@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pyxel>=2.8.9",
]

[project.scripts]
pyxelhangman = "pyxelhangman:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
